// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a div with class none if there are no saved challenges 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedChallenges
    intl={
      Object {
        "formatMessage": [MockFunction],
      }
    }
    user={
      Object {
        "savedChallenges": Array [],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
        >
          <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
          />
        </h2>,
        <div
          className="none"
        >
          No Challenges
        </div>,
      ],
      "className": "user-profile__saved-challenges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
          />,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Saved Challenges",
            "id": "UserProfile.savedChallenges.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "No Challenges",
          "className": "none",
        },
        "ref": null,
        "rendered": "No Challenges",
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
          >
            <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
            />
          </h2>,
          <div
            className="none"
          >
            No Challenges
          </div>,
        ],
        "className": "user-profile__saved-challenges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
            />,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Saved Challenges",
              "id": "UserProfile.savedChallenges.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "No Challenges",
            "className": "none",
          },
          "ref": null,
          "rendered": "No Challenges",
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`it renders a list of the saved challenges with links to each 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SavedChallenges
    intl={
      Object {
        "formatMessage": [MockFunction] {
          "calls": Array [
            Array [
              Object {
                "defaultMessage": "Unsave Challenge",
                "id": "Challenge.controls.unsave.tooltip",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Unsave Challenge",
                "id": "Challenge.controls.unsave.tooltip",
              },
            ],
            Array [
              Object {
                "defaultMessage": "Unsave Challenge",
                "id": "Challenge.controls.unsave.tooltip",
              },
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    user={
      Object {
        "savedChallenges": Array [
          Object {
            "id": 321,
            "name": "First Challenge",
          },
          Object {
            "id": 654,
            "name": "Second Challenge",
          },
          Object {
            "id": 987,
            "name": "Third Challenge",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2
          className="subtitle"
        >
          <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
          />
        </h2>,
        <ul>
          <li
            className="user-profile__saved-challenges__challenge"
          >
            <Link
              replace={false}
              to="/browse/challenges/321"
            >
              First Challenge
            </Link>
            <span
              className="connector"
            />
            <a
              className="button is-clear"
              onClick={[Function]}
            >
              <SvgSymbol
                className="icon"
                sym="trash-icon"
                viewBox="0 0 20 20"
              />
            </a>
          </li>
          <li
            className="user-profile__saved-challenges__challenge"
          >
            <Link
              replace={false}
              to="/browse/challenges/654"
            >
              Second Challenge
            </Link>
            <span
              className="connector"
            />
            <a
              className="button is-clear"
              onClick={[Function]}
            >
              <SvgSymbol
                className="icon"
                sym="trash-icon"
                viewBox="0 0 20 20"
              />
            </a>
          </li>
          <li
            className="user-profile__saved-challenges__challenge"
          >
            <Link
              replace={false}
              to="/browse/challenges/987"
            >
              Third Challenge
            </Link>
            <span
              className="connector"
            />
            <a
              className="button is-clear"
              onClick={[Function]}
            >
              <SvgSymbol
                className="icon"
                sym="trash-icon"
                viewBox="0 0 20 20"
              />
            </a>
          </li>
        </ul>,
      ],
      "className": "user-profile__saved-challenges",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormattedMessage
            defaultMessage="Saved Challenges"
            id="UserProfile.savedChallenges.header"
            values={Object {}}
          />,
          "className": "subtitle",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "defaultMessage": "Saved Challenges",
            "id": "UserProfile.savedChallenges.header",
            "values": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/321"
              >
                First Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>,
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/654"
              >
                Second Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>,
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/987"
              >
                Third Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "321",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/browse/challenges/321"
                >
                  First Challenge
                </Link>,
                <span
                  className="connector"
                />,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>,
              ],
              "className": "user-profile__saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "First Challenge",
                  "replace": false,
                  "to": "/browse/challenges/321",
                },
                "ref": null,
                "rendered": "First Challenge",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "654",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/browse/challenges/654"
                >
                  Second Challenge
                </Link>,
                <span
                  className="connector"
                />,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>,
              ],
              "className": "user-profile__saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Second Challenge",
                  "replace": false,
                  "to": "/browse/challenges/654",
                },
                "ref": null,
                "rendered": "Second Challenge",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
          Object {
            "instance": null,
            "key": "987",
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Link
                  replace={false}
                  to="/browse/challenges/987"
                >
                  Third Challenge
                </Link>,
                <span
                  className="connector"
                />,
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>,
              ],
              "className": "user-profile__saved-challenges__challenge",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Third Challenge",
                  "replace": false,
                  "to": "/browse/challenges/987",
                },
                "ref": null,
                "rendered": "Third Challenge",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "connector",
                },
                "ref": null,
                "rendered": null,
                "type": "span",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />,
                  "className": "button is-clear",
                  "onClick": [Function],
                  "title": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "className": "icon",
                    "sym": "trash-icon",
                    "viewBox": "0 0 20 20",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": "a",
              },
            ],
            "type": "li",
          },
        ],
        "type": "ul",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2
            className="subtitle"
          >
            <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
            />
          </h2>,
          <ul>
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/321"
              >
                First Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/654"
              >
                Second Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>
            <li
              className="user-profile__saved-challenges__challenge"
            >
              <Link
                replace={false}
                to="/browse/challenges/987"
              >
                Third Challenge
              </Link>
              <span
                className="connector"
              />
              <a
                className="button is-clear"
                onClick={[Function]}
              >
                <SvgSymbol
                  className="icon"
                  sym="trash-icon"
                  viewBox="0 0 20 20"
                />
              </a>
            </li>
          </ul>,
        ],
        "className": "user-profile__saved-challenges",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormattedMessage
              defaultMessage="Saved Challenges"
              id="UserProfile.savedChallenges.header"
              values={Object {}}
            />,
            "className": "subtitle",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "defaultMessage": "Saved Challenges",
              "id": "UserProfile.savedChallenges.header",
              "values": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="user-profile__saved-challenges__challenge"
              >
                <Link
                  replace={false}
                  to="/browse/challenges/321"
                >
                  First Challenge
                </Link>
                <span
                  className="connector"
                />
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>
              </li>,
              <li
                className="user-profile__saved-challenges__challenge"
              >
                <Link
                  replace={false}
                  to="/browse/challenges/654"
                >
                  Second Challenge
                </Link>
                <span
                  className="connector"
                />
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>
              </li>,
              <li
                className="user-profile__saved-challenges__challenge"
              >
                <Link
                  replace={false}
                  to="/browse/challenges/987"
                >
                  Third Challenge
                </Link>
                <span
                  className="connector"
                />
                <a
                  className="button is-clear"
                  onClick={[Function]}
                >
                  <SvgSymbol
                    className="icon"
                    sym="trash-icon"
                    viewBox="0 0 20 20"
                  />
                </a>
              </li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "321",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/browse/challenges/321"
                  >
                    First Challenge
                  </Link>,
                  <span
                    className="connector"
                  />,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                  >
                    <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />
                  </a>,
                ],
                "className": "user-profile__saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "First Challenge",
                    "replace": false,
                    "to": "/browse/challenges/321",
                  },
                  "ref": null,
                  "rendered": "First Challenge",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "654",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/browse/challenges/654"
                  >
                    Second Challenge
                  </Link>,
                  <span
                    className="connector"
                  />,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                  >
                    <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />
                  </a>,
                ],
                "className": "user-profile__saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Second Challenge",
                    "replace": false,
                    "to": "/browse/challenges/654",
                  },
                  "ref": null,
                  "rendered": "Second Challenge",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "987",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Link
                    replace={false}
                    to="/browse/challenges/987"
                  >
                    Third Challenge
                  </Link>,
                  <span
                    className="connector"
                  />,
                  <a
                    className="button is-clear"
                    onClick={[Function]}
                  >
                    <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />
                  </a>,
                ],
                "className": "user-profile__saved-challenges__challenge",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Third Challenge",
                    "replace": false,
                    "to": "/browse/challenges/987",
                  },
                  "ref": null,
                  "rendered": "Third Challenge",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "connector",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": <SvgSymbol
                      className="icon"
                      sym="trash-icon"
                      viewBox="0 0 20 20"
                    />,
                    "className": "button is-clear",
                    "onClick": [Function],
                    "title": undefined,
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "className": "icon",
                      "sym": "trash-icon",
                      "viewBox": "0 0 20 20",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                  "type": "a",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
